apps/adguard-home/adguard-dns.yaml
apiVersion: v1
kind: Service
metadata:
    name: adguard-dns
spec:
    type: LoadBalancer
    externalTrafficPolicy: Local
    selector: 
      app.kubernetes.io/name: adguard-home
    ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
